--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "1. Forkez ce repo ; 2. Il est conseillé d'utiliser VisualStudio Code et vous pouvez utiliser Docker, mais ce n'est pas obligatoire ; 3. Il n'y a aucune dépendance ; 4. Vous ne devez utiliser que du CSS personnalisé et du JavaScript pur, sans jQuery, Bootstrap ou autre librairie.",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "doc": "jsdoc -c jsdoc.json",
     "lint": "eslint --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OpenClassrooms-Student-Center/GameOn-website-FR.git"
+    "url": "git+https://github.com/sophapojul/p4.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/OpenClassrooms-Student-Center/GameOn-website-FR/issues"
+    "url": "https://github.com/sophapojul/p4.git/issues"
   },
-  "homepage": "https://github.com/OpenClassrooms-Student-Center/GameOn-website-FR#readme",
+  "homepage": "https://github.com/sophapojul/p4.git",
   "devDependencies": {
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
