--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "p4",
   "version": "1.0.0",
-  "description": "1. Forkez ce repo ; 2. Il est conseillé d'utiliser VisualStudio Code et vous pouvez utiliser Docker, mais ce n'est pas obligatoire ; 3. Il n'y a aucune dépendance ; 4. Vous ne devez utiliser que du CSS personnalisé et du JavaScript pur, sans jQuery, Bootstrap ou autre librairie.",
+  "description": "GameOn landing page avec une modale qui contient un formulaire d'inscription",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
     "doc": "jsdoc -c jsdoc.json",
     "lint": "eslint --fix"
   },
@@ -21,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/sophapojul/p4.git/issues"
   },
-  "homepage": "https://github.com/sophapojul/p4.git",
+  "homepage": "https://sophapojul.github.io/p4/",
   "devDependencies": {
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
